Forms Style Fixed,A Center Class Named "center" created for Horizental Aligning.

--- a/ShirazUniversityCatalogue/www/css/style.css
+++ b/ShirazUniversityCatalogue/www/css/style.css
@@ -9,12 +9,69 @@
 	text-align: center;
 	padding-top: 10px;
 	padding-bottom: 10px;
-/*		border: dashed;
-	border-width: 1px;*/
+	/*border: dashed;*/
+	/*border-width: 1px;*/
 	/*border-radius: 1px;*/
-	cursor: pointer;
+	/*cursor: pointer;*/
 }
 .su-day-selected{
 	background: #387EF5;
 	color: white;
+}
+
+.center{
+	display: -webkit-box;
+	display: -moz-box;
+	display: -ms-flexbox;
+	display: -webkit-flex;
+	display: flex;
+	-webkit-box-direction: normal;
+	-moz-box-direction: normal;
+	-webkit-box-orient: horizontal;
+	-moz-box-orient: horizontal;
+	-webkit-flex-direction: row;
+	-ms-flex-direction: row;
+	flex-direction: row;
+	-webkit-flex-wrap: nowrap;
+	-ms-flex-wrap: nowrap;
+	flex-wrap: nowrap;
+	-webkit-box-pack: center;
+	-moz-box-pack: center;
+	-webkit-justify-content: center;
+	-ms-flex-pack: center;
+	justify-content: center;
+	-webkit-align-content: stretch;
+	-ms-flex-line-pack: stretch;
+	align-content: stretch;
+	-webkit-box-align: center;
+	-moz-box-align: center;
+	-webkit-align-items: center;
+	-ms-flex-align: center;
+	align-items: center;
+}
+
+table {
+	border: 1px solid #ccc;
+	width: 70%;
+	margin:0;
+	padding:0;
+	border-collapse: collapse;
+	border-spacing: 0;
+}
+
+table tr {
+	border: 1px solid #ddd;
+	padding: 5px;
+}
+
+table th, table td {
+	padding: 10px;
+	border: 1px solid #ddd;
+	text-align: right;
+}
+
+table th {
+	text-transform: uppercase;
+	font-size: 14px;
+	letter-spacing: 1px;
 }
